--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -9,12 +10,191 @@
     tools:showIn="@layout/activity_main">
 
     <TextView
+        android:id="@+id/tv_qa"
+        android:layout_width="0dp"
+        style="@style/fontDisplayRegular"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_marginEnd="16dp"
+        android:text="How money do you have\nin this month?"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvNEC"
+        style="@style/fontDisplayRegular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:text="NEC - 55%"
+        app:layout_constraintBottom_toBottomOf="@+id/etNec"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/etNec" />
+
+    <TextView
+        android:id="@+id/tvPlay"
+        style="@style/fontDisplayRegular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PLY - 10%"
+        app:layout_constraintBottom_toBottomOf="@+id/etPlay"
+        app:layout_constraintStart_toStartOf="@+id/tvNEC"
+        app:layout_constraintTop_toTopOf="@+id/etPlay" />
+
+    <EditText
+        android:id="@+id/etNec"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        style="@style/fontDisplayRegular"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:enabled="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/tvNEC"
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="right"
+        app:constraint_referenced_ids="tvPlay,tvNEC,tvEDU,tvLTS,tvGIVE,tvFFA"
+        tools:layout_editor_absoluteX="411dp" />
+
+    <com.yigitserin.currencyedittext.CurrencyEditText
+        android:id="@+id/editText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
+        style="@style/fontDisplayRegular"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:ems="10"
+        android:gravity="center"
+        android:inputType="numberDecimal"
+        android:maxLength="20"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_qa" />
+
+    <TextView
+        android:id="@+id/tvFFA"
+        style="@style/fontDisplayRegular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FFA - 10%"
+        app:layout_constraintBottom_toBottomOf="@+id/etFfa"
+        app:layout_constraintStart_toStartOf="@+id/tvPlay"
+        app:layout_constraintTop_toTopOf="@+id/etFfa" />
+
+    <TextView
+        android:id="@+id/tvEDU"
+        style="@style/fontDisplayRegular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EDU - 10%"
+        app:layout_constraintBottom_toBottomOf="@+id/etEdu"
+        app:layout_constraintStart_toStartOf="@+id/tvFFA"
+        app:layout_constraintTop_toTopOf="@+id/etEdu" />
+
+    <TextView
+        android:id="@+id/tvLTS"
+        style="@style/fontDisplayRegular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LTS - 10%"
+        app:layout_constraintBottom_toBottomOf="@+id/etLts"
+        app:layout_constraintStart_toStartOf="@+id/tvEDU"
+        app:layout_constraintTop_toTopOf="@+id/etLts" />
+
+    <TextView
+        android:id="@+id/tvGIVE"
+        style="@style/fontDisplayRegular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GIV - 5%"
+        app:layout_constraintBottom_toBottomOf="@+id/etGive"
+        app:layout_constraintStart_toStartOf="@+id/tvLTS"
+        app:layout_constraintTop_toTopOf="@+id/etGive" />
+
+    <EditText
+        android:id="@+id/etPlay"
+        style="@style/fontDisplayRegular"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="numberSigned"
+        app:layout_constraintEnd_toEndOf="@+id/etNec"
+        app:layout_constraintStart_toStartOf="@+id/etNec"
+        app:layout_constraintTop_toBottomOf="@+id/etNec" />
+
+    <EditText
+        android:id="@+id/etFfa"
+        style="@style/fontDisplayRegular"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:enabled="false"
+        android:inputType="numberSigned"
+        app:layout_constraintEnd_toEndOf="@+id/etPlay"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/etPlay"
+        app:layout_constraintTop_toBottomOf="@+id/etPlay" />
+
+    <EditText
+        android:id="@+id/etEdu"
+        style="@style/fontDisplayRegular"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:enabled="false"
+        android:inputType="numberSigned"
+        app:layout_constraintEnd_toEndOf="@+id/etFfa"
+        app:layout_constraintStart_toStartOf="@+id/etFfa"
+        app:layout_constraintTop_toBottomOf="@+id/etFfa" />
+
+    <EditText
+        android:id="@+id/etLts"
+        style="@style/fontDisplayRegular"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:enabled="false"
+        android:inputType="numberSigned"
+        app:layout_constraintEnd_toEndOf="@+id/etEdu"
+        app:layout_constraintStart_toStartOf="@+id/etEdu"
+        app:layout_constraintTop_toBottomOf="@+id/etEdu" />
+
+    <EditText
+        android:id="@+id/etGive"
+        style="@style/fontDisplayRegular"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:enabled="false"
+        android:inputType="numberDecimal"
+        app:layout_constraintEnd_toEndOf="@+id/etLts"
+        app:layout_constraintStart_toStartOf="@+id/etLts"
+        app:layout_constraintTop_toBottomOf="@+id/etLts" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
