--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,7 @@
     tools:context="com.bip.jars.MainActivity">
     <item
         android:id="@+id/action_about"
+        android:icon="@android:drawable/ic_dialog_info"
         android:orderInCategory="100"
         android:title="@string/action_about"
         app:showAsAction="always" />
@@ -12,5 +13,6 @@
         android:id="@+id/action_setting"
         android:orderInCategory="100"
         android:title="@string/action_setting"
+        android:visible="false"
         app:showAsAction="never" />
 </menu>
